k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pineapple
  labels:
    app.kubernetes.io/name: pineapple
spec:
  ingressClassName: nginx
  rules:

  - host: "*.preview.localhost"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: project-service
            port:
              number: 80
              
  - host: "*.file-system.localhost"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: project-service
            port:
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: "/api/auth"
        backend:
          service:
            name: auth-service
            port: 
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: "/api/projects"
        backend:
          service:
            name: project-service
            port: 
              number: 80
